[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.9.3"
rustls-pemfile = "1.0.2"
tokio = { version = "1.28.0", features = ["full"] }
rustls = { version = "0.20.8", features = ["dangerous_configuration", "quic"] }

[[bin]]
name = "client"
path = "src/main.rs"

[dev-dependencies]
crypto = "0.5.0"
rcgen = "0.10.0"
tokio = { version = "1.28.0", features = ["macros", "sync"] }
