[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["yuriikhomych <yuriykhomich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aioquic = "^0.9.20"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
